--- a/conky_left.conf
+++ b/conky_left.conf
@@ -70,7 +70,7 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
-    lua_load = '~/.config/conky/conky.lua',
+    lua_load = './conky.lua',
     --lua_draw_hook_post = 'main',
 }
 
