--- a/conky_left.conf
+++ b/conky_left.conf
@@ -70,7 +70,7 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
-    lua_load = './conky.lua',
+    lua_load = '/home/tommy/.config/conky/conky.lua',
     --lua_draw_hook_post = 'main',
 }
 
@@ -78,6 +78,8 @@ conky.text = [[
 ${font Aileron Light:size=15}System
 ${voffset -30}${font Aileron Light:size=10}${hr 3}
 ${font monospace:size=8}Uptime: $uptime
+Battery status: ${battery} ${battery_bar 20}
+Battery time:   ${battery_time}
 
 CPU 1:${lua_parse lpad 3 ${cpu cpu1}}%  ${cpubar cpu1 20}
 CPU 2:${lua_parse lpad 3 ${cpu cpu2}}%  ${cpubar cpu2 20}
@@ -93,19 +95,19 @@ RAM: ${mem}  ${membar 20}
 Swap: ${swap}  ${swapbar 20}
 
 ${lua_parse rpad 15 Process}     PID     CPU%     RAM%
-${lua_parse rpad 15 ${top name 1}}${top pid 1}   ${top cpu 1}   ${top mem 1}
-${lua_parse rpad 15 ${top name 2}}${top pid 2}   ${top cpu 2}   ${top mem 2}
-${lua_parse rpad 15 ${top name 3}}${top pid 3}   ${top cpu 3}   ${top mem 3}
-${lua_parse rpad 15 ${top name 4}}${top pid 4}   ${top cpu 4}   ${top mem 4}
-${lua_parse rpad 15 ${top name 5}}${top pid 5}   ${top cpu 5}   ${top mem 5}
+${lua_parse rpad 15 ${top_mem name 1}}${top_mem pid 1}   ${top_mem cpu 1}   ${top_mem mem 1}
+${lua_parse rpad 15 ${top_mem name 2}}${top_mem pid 2}   ${top_mem cpu 2}   ${top_mem mem 2}
+${lua_parse rpad 15 ${top_mem name 3}}${top_mem pid 3}   ${top_mem cpu 3}   ${top_mem mem 3}
+${lua_parse rpad 15 ${top_mem name 4}}${top_mem pid 4}   ${top_mem cpu 4}   ${top_mem mem 4}
+${lua_parse rpad 15 ${top_mem name 5}}${top_mem pid 5}   ${top_mem cpu 5}   ${top_mem mem 5}
 
-Disk: ${fs_used} / ${fs_size}
+Disk: ${fs_used} / ${fs_size} ${fs_bar 20}
 
 ${font Aileron Light:size=15}Network
 ${voffset -30}${font Aileron Light:size=10}${hr 3}
 ${font monospace:size=8}SSID: ${wireless_essid wlp0s20f3}
 
-Local IP:  ${addr wlp0s20f3}
+Local  IP: ${addr wlp0s20f3}
 Global IP: ${exec curl --silent http://ipecho.net/plain}
 
 Up:   ${upspeed wlp0s20f3}
