Add pretty colors to battery, cpu, and mem

--- a/conky_left.conf
+++ b/conky_left.conf
@@ -70,7 +70,7 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
-    lua_load = '/home/tommy/.config/conky/conky.lua',
+    lua_load = '~/.config/conky/conky.lua',
     --lua_draw_hook_post = 'main',
 }
 
@@ -78,23 +78,23 @@ conky.text = [[
 ${font Aileron Light:size=15}System
 ${voffset -30}${font Aileron Light:size=10}${hr 3}
 ${font monospace:size=8}Uptime: $uptime
-Battery status: ${battery} ${battery_bar 20}
-Battery time:   ${battery_time}
+Battery status: ${battery} ${lua_parse color_battery ${battery}}
+${color white}Battery time:   ${battery_time}
 
-CPU 1:${lua_parse lpad 3 ${cpu cpu1}}%  ${cpubar cpu1 20}
-CPU 2:${lua_parse lpad 3 ${cpu cpu2}}%  ${cpubar cpu2 20}
-CPU 3:${lua_parse lpad 3 ${cpu cpu3}}%  ${cpubar cpu3 20}
-CPU 4:${lua_parse lpad 3 ${cpu cpu4}}%  ${cpubar cpu4 20}
-CPU 5:${lua_parse lpad 3 ${cpu cpu5}}%  ${cpubar cpu5 20}
-CPU 6:${lua_parse lpad 3 ${cpu cpu6}}%  ${cpubar cpu6 20}
-CPU 7:${lua_parse lpad 3 ${cpu cpu7}}%  ${cpubar cpu7 20}
-CPU 8:${lua_parse lpad 3 ${cpu cpu8}}%  ${cpubar cpu8 20}
-Total:${lua_parse lpad 3 ${cpu cpu0}}%  ${cpubar cpu0 20}
+${lua_parse color_cpu 1}
+${lua_parse color_cpu 2}
+${lua_parse color_cpu 3}
+${lua_parse color_cpu 4}
+${lua_parse color_cpu 5}
+${lua_parse color_cpu 6}
+${lua_parse color_cpu 7}
+${lua_parse color_cpu 8}
+${lua_parse color_cpu_total}
 
-RAM: ${mem}  ${membar 20}
-Swap: ${swap}  ${swapbar 20}
+${color white}RAM: ${mem} ${lua_parse color_ram ${mem}}
+${color white}Swap: ${swap} ${lua_parse color_swap ${swap}}
 
-${lua_parse rpad 15 Process}     PID     CPU%     RAM%
+${color white}${lua_parse rpad 15 Process}     PID     CPU%     RAM%
 ${lua_parse rpad 15 ${top_mem name 1}}${top_mem pid 1}   ${top_mem cpu 1}   ${top_mem mem 1}
 ${lua_parse rpad 15 ${top_mem name 2}}${top_mem pid 2}   ${top_mem cpu 2}   ${top_mem mem 2}
 ${lua_parse rpad 15 ${top_mem name 3}}${top_mem pid 3}   ${top_mem cpu 3}   ${top_mem mem 3}
