Update colors, add /s to up/down speeds

--- a/conky_left.conf
+++ b/conky_left.conf
@@ -110,8 +110,8 @@ ${font monospace:size=8}SSID: ${wireless_essid wlp0s20f3}
 Local  IP: ${addr wlp0s20f3}
 Global IP: ${exec curl --silent http://ipecho.net/plain}
 
-Up:   ${upspeed wlp0s20f3}
-Down: ${downspeed wlp0s20f3}
+Up:   ${upspeed wlp0s20f3}/s
+Down: ${downspeed wlp0s20f3}/s
 
 Uploaded:   ${totalup wlp0s20f3}
 Downloaded: ${totaldown wlp0s20f3}
