Improve memory coloring, add top 3 cpu procs

--- a/conky_left.conf
+++ b/conky_left.conf
@@ -93,15 +93,17 @@ ${lua_parse color_cpu_total}
 
 ${color white}RAM: ${mem} ${lua_parse color_ram ${mem}}
 ${color white}Swap: ${swap} ${lua_parse color_swap ${swap}}
+${color white}Disk: ${fs_used} / ${fs_size} ${fs_bar 20}
 
 ${color white}${lua_parse rpad 15 Process}     PID     CPU%     RAM%
+
 ${lua_parse rpad 15 ${top_mem name 1}}${top_mem pid 1}   ${top_mem cpu 1}   ${top_mem mem 1}
 ${lua_parse rpad 15 ${top_mem name 2}}${top_mem pid 2}   ${top_mem cpu 2}   ${top_mem mem 2}
 ${lua_parse rpad 15 ${top_mem name 3}}${top_mem pid 3}   ${top_mem cpu 3}   ${top_mem mem 3}
-${lua_parse rpad 15 ${top_mem name 4}}${top_mem pid 4}   ${top_mem cpu 4}   ${top_mem mem 4}
-${lua_parse rpad 15 ${top_mem name 5}}${top_mem pid 5}   ${top_mem cpu 5}   ${top_mem mem 5}
 
-Disk: ${fs_used} / ${fs_size} ${fs_bar 20}
+${lua_parse rpad 15 ${top name 1}}${top pid 1}   ${top cpu 1}   ${top mem 1}
+${lua_parse rpad 15 ${top name 2}}${top pid 2}   ${top cpu 2}   ${top mem 2}
+${lua_parse rpad 15 ${top name 3}}${top pid 3}   ${top cpu 3}   ${top mem 3}
 
 ${font Aileron Light:size=15}Network
 ${voffset -30}${font Aileron Light:size=10}${hr 3}
