Update time/date positioning
I think nix updates (recently updated the flakes) caused this to be off.

--- a/xmonad/conky_clock.conf
+++ b/xmonad/conky_clock.conf
@@ -44,8 +44,8 @@ conky.config = {
     draw_shades = false,
     extra_newline = false,
     font = 'Aileron Ultralight',
-    gap_x = 60,
-    gap_y = 60,
+    gap_x = 0,
+    gap_y = 10,
     minimum_height = 900,
     minimum_width = 900,
     net_avg_samples = 2,
@@ -72,6 +72,6 @@ conky.config = {
 }
 
 conky.text = [[
-${font Aileron UltraLight:size=125}${time %H:%M}
-${voffset -400}${goto 200} ${font Aileron UltraLight:size=30}${time %A, %d %b}
+${goto 500}${font Aileron UltraLight:size=125}${time %H:%M}
+${voffset -125}${goto 600} ${font Aileron UltraLight:size=30}${time %A, %d %b}
 ]]
