--- a/plasma/conky_right.conf
+++ b/plasma/conky_right.conf
@@ -28,7 +28,7 @@ conky.config = {
     alignment = 'top_right',
     
     background = false,
-    border_width = 1,
+    border_width = 0,
     cpu_avg_samples = 2,
     default_color = 'white',
     color1 = 'DDDDDD',
@@ -39,13 +39,13 @@ conky.config = {
     default_shade_color = 'white',
     double_buffer = true,
     draw_borders = false,
-    draw_graph_borders = true,
+    draw_graph_borders = false,
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
     font = 'Aileron Ultralight',
-    gap_x = 60,
-    gap_y = 60,
+    gap_x = 0,
+    gap_y = 10,
     minimum_height = 900,
     minimum_width = 900,
     net_avg_samples = 2,
@@ -72,6 +72,6 @@ conky.config = {
 }
 
 conky.text = [[
-${font Aileron UltraLight:size=125}${time %H:%M}
-${voffset -400}${goto 250} ${font Aileron UltraLight:size=30}${time %A, %b %d}
+${goto 500}${font Aileron UltraLight:size=125}${time %H:%M}
+${voffset -125}${goto 500} ${font Aileron UltraLight:size=30}${time %A, %d %b}
 ]]
