--- a/conkyrc_left.conf
+++ b/conkyrc_left.conf
@@ -25,29 +25,31 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ]]
 
 conky.config = {
-    alignment = 'top_right',
+    alignment = 'top_left',
     
     background = false,
-    border_width = 0,
+    border_width = 1,
     cpu_avg_samples = 2,
-    default_color = 'white',
+    -- default_color = 'white',
+    default_color = 'FFFFFF',
     color1 = 'DDDDDD',
     color2 = 'AAAAAA',
     color3 = '888888',
     color4 = 'EF5A29',
+    color5 = '#e8e8e8',
     default_outline_color = 'white',
     default_shade_color = 'white',
     double_buffer = true,
     draw_borders = false,
-    draw_graph_borders = false,
+    draw_graph_borders = true,
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
     font = 'Aileron Ultralight',
-    gap_x = 0,
-    gap_y = 10,
-    minimum_height = 900,
-    minimum_width = 900,
+    gap_x = 20,
+    gap_y = 50,
+    minimum_height = 500,
+    minimum_width = 400,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -59,7 +61,7 @@ conky.config = {
     own_window_transparent = false,
     own_window_argb_visual = true,
     own_window_argb_value = 000,
-    own_window_type = 'normal',
+    own_window_type = 'desktop',
     own_window_hints = 'undecorated,sticky,skip_taskbar,skip_pager,below',
     draw_blended = false,
     show_graph_range = false,
@@ -69,9 +71,37 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
+    lua_load = '~/.config/conky/conkyrc_draw.lua',
+    lua_draw_hook_post = 'main',
 }
 
 conky.text = [[
-${goto 500}${font Aileron UltraLight:size=125}${time %H:%M}
-${voffset -125}${goto 500} ${font Aileron UltraLight:size=30}${time %A, %d %b}
+${voffset -15}${font Aileron Ultralight:size=30}System
+${voffset -35}${hr 0}
+${voffset -30}${font monospace:size=10}${color5}Uptime: $uptime
+
+${voffset 110}${color5}Disk: ${fs_used} / ${fs_size} ${fs_bar 10}
+
+${font monospace:bold:size=10}${color5}${lua_parse rpad 15 Process}     PID     CPU%     RAM%
+
+${font monospace:size=10}${lua_parse rpad 15 ${top_mem name 1}}${top_mem pid 1}   ${top_mem cpu 1}   ${top_mem mem 1}
+${lua_parse rpad 15 ${top_mem name 2}}${top_mem pid 2}   ${top_mem cpu 2}   ${top_mem mem 2}
+${lua_parse rpad 15 ${top_mem name 3}}${top_mem pid 3}   ${top_mem cpu 3}   ${top_mem mem 3}
+
+${lua_parse rpad 15 ${top name 1}}${top pid 1}   ${top cpu 1}   ${top mem 1}
+${lua_parse rpad 15 ${top name 2}}${top pid 2}   ${top cpu 2}   ${top mem 2}
+${lua_parse rpad 15 ${top name 3}}${top pid 3}   ${top cpu 3}   ${top mem 3}
+
+${font Aileron Ultralight:size=30}Network
+${voffset -35}${hr 0}
+${voffset -30}${font monospace:size=10}SSID: ${wireless_essid wlp0s20f3}
+
+Local  IP: ${addr wlp0s20f3}
+Global IP: ${exec curl --silent http://ipecho.net/plain}
+
+Up:   ${upspeed wlp0s20f3}/s
+Down: ${downspeed wlp0s20f3}/s
+
+Uploaded:   ${totalup wlp0s20f3}
+Downloaded: ${totaldown wlp0s20f3}
 ]]
