Remove disk bar

--- a/conkyrc_left.conf
+++ b/conkyrc_left.conf
@@ -80,7 +80,7 @@ ${voffset -15}${font Aileron Ultralight:size=30}System
 ${voffset -35}${hr 0}
 ${voffset -30}${font monospace:size=10}${color5}Uptime: $uptime
 
-${voffset 110}${color5}Disk: ${fs_used} / ${fs_size} ${fs_bar 10}
+${voffset 110}${color5}Disk: ${fs_used} / ${fs_size}
 
 ${font monospace:bold:size=10}${color5}${lua_parse rpad 15 Process}     PID     CPU%     RAM%
 
