Add timezones to conky_right

--- a/conkyrc_right.conf
+++ b/conkyrc_right.conf
@@ -35,6 +35,7 @@ conky.config = {
     color2 = 'AAAAAA',
     color3 = '888888',
     color4 = 'EF5A29',
+    color5 = '#e8e8e8',
     default_outline_color = 'white',
     default_shade_color = 'white',
     double_buffer = true,
@@ -47,7 +48,8 @@ conky.config = {
     gap_x = 0,
     gap_y = 10,
     minimum_height = 900,
-    minimum_width = 900,
+    minimum_width = 400,
+    maximum_width = 400,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -72,6 +74,11 @@ conky.config = {
 }
 
 conky.text = [[
-${goto 500}${font Aileron UltraLight:size=125}${time %H:%M}
-${voffset -125}${goto 500} ${font Aileron UltraLight:size=30}${time %A, %d %b}
+${font Aileron UltraLight:size=125}${alignr}${time %H:%M}
+${voffset -125}${font Aileron UltraLight:size=30}${alignr}${offset -10}${time %A, %d %b}
+${voffset -20}${hr 0}
+${voffset -30}${font monospace:size=10}${color5}${alignr}${execi 30 ruby conky.rb "LA" "America/Los_Angeles"}
+${alignr}${execi 30 ruby conky.rb "NY" "America/New_York"}
+${alignr}${execi 30 ruby conky.rb "UTC" "Etc/UTC"}
+${alignr}${execi 30 ruby conky.rb "CET" "Europe/Madrid"}
 ]]
