--- a/conky_left.conf
+++ b/conky_left.conf
@@ -71,7 +71,7 @@ conky.config = {
     uppercase = false,
     use_spacer = 'none',
     use_xft = true,
-    lua_load = '~/.config/conky/conkyrc_draw.lua',
+    lua_load = '~/.config/conky/conky_draw.lua',
     lua_draw_hook_post = 'main',
 }
 
