Fix ruby script path

--- a/conky_right.conf
+++ b/conky_right.conf
@@ -77,8 +77,8 @@ conky.text = [[
 ${font Aileron UltraLight:size=125}${alignr}${time %H:%M}
 ${voffset -125}${font Aileron UltraLight:size=30}${alignr}${offset -10}${time %A, %d %b}
 ${voffset -20}${hr 0}
-${voffset -30}${font monospace:size=10}${color5}${alignr}${execi 30 ruby conky.rb "LA" "America/Los_Angeles"}
-${alignr}${execi 30 ruby conky.rb "NY" "America/New_York"}
-${alignr}${execi 30 ruby conky.rb "UTC" "Etc/UTC"}
-${alignr}${execi 30 ruby conky.rb "CET" "Europe/Madrid"}
+${voffset -30}${font monospace:size=10}${color5}${alignr}${execi 30 ruby ~/.config/conky/conky.rb "LA" "America/Los_Angeles"}
+${alignr}${execi 30 ruby ~/.config/conky/conky.rb "NY" "America/New_York"}
+${alignr}${execi 30 ruby ~/.config/conky/conky.rb "UTC" "Etc/UTC"}
+${alignr}${execi 30 ruby ~/.config/conky/conky.rb "CET" "Europe/Madrid"}
 ]]
