Add hong kong time

--- a/conky_right.conf
+++ b/conky_right.conf
@@ -80,5 +80,5 @@ ${voffset -20}${hr 0}
 ${voffset -30}${font monospace:size=10}${color5}${alignr}${execi 30 ruby ~/.config/conky/conky.rb "LA" "America/Los_Angeles"}
 ${alignr}${execi 30 ruby ~/.config/conky/conky.rb "NY" "America/New_York"}
 ${alignr}${execi 30 ruby ~/.config/conky/conky.rb "UTC" "Etc/UTC"}
-${alignr}${execi 30 ruby ~/.config/conky/conky.rb "CET" "Europe/Madrid"}
+${alignr}${execi 30 ruby ~/.config/conky/conky.rb "HK" "Asia/Hong_Kong"}
 ]]
